<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usuario"
        style="@style/TxtLogin"
        android:layout_width="@dimen/TxtAncho"
        android:layout_height="@dimen/TxtAltura"
        android:layout_marginTop="76dp"
        android:hint="@string/TxtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/psw"
        style="@style/TxtLogin"
        android:layout_width="@dimen/TxtAncho"
        android:layout_height="@dimen/TxtAltura"
        android:layout_marginTop="16dp"
        android:hint="@string/TxtClave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <Button
        android:id="@+id/btn_ingresar"
        style="@style/Botones"
        android:layout_width="@dimen/TxtAncho"
        android:layout_height="@dimen/TxtAltura"
        android:layout_marginTop="64dp"
        android:onClick="login"
        android:text="@string/BtnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psw"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>