<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CargaItems">

    <include layout="@layout/encabezado"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/rz_clte"
        style="@style/TxtDatosPedidoClte"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/eti_cliente"></TextView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/ListaItemsPedido"
            android:layout_width="match_parent"
            android:layout_height="@dimen/TamListViewDatPed">

        </ListView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            style="@style/BotonFlotante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/ListaItemsPedido"
            android:layout_alignBottom="@id/ListaItemsPedido"
            android:layout_gravity="right|bottom"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_input_add" />


    </RelativeLayout>


    <TextView
        android:id="@+id/TotalPedido"
        style="@style/TxtDatosPedidoTotal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_below="@id/ListaItemsPedido"
        android:text="@string/eti_total">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ConfPEd"
        style="@style/BtnConfPed"
        android:layout_marginTop="@dimen/Margenes10"
        android:layout_marginLeft="@dimen/Margenes10"
        android:layout_marginRight="@dimen/Margenes10"
        >

    </Button>

    </LinearLayout>
    </ScrollView>
</LinearLayout>

